[gd_scene load_steps=6 format=3 uid="uid://3ddlvfk8j20o"]

[ext_resource type="Texture2D" uid="uid://d3ujkltb5wgyd" path="res://Scenes/Func/GridSystem/Grids/assets/不适宜种植.png" id="1_iw012"]
[ext_resource type="Script" path="res://Scenes/Func/GridSystem/Grids/base_grid.gd" id="1_tsmn6"]

[sub_resource type="Animation" id="Animation_jyfyd"]
resource_name = "highlight"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpLeftFrame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-5, -5), Vector2(-7, -7), Vector2(-5, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpRightFrame:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, -5), Vector2(7, -7), Vector2(5, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DownRightFrame:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(7, 7), Vector2(5, 5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DownLeftFrame:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-5, 5), Vector2(-7, 7), Vector2(-5, 5)]
}

[sub_resource type="Animation" id="Animation_q73tc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpLeftFrame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpRightFrame:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DownRightFrame:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DownLeftFrame:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yajyr"]
_data = {
"RESET": SubResource("Animation_q73tc"),
"highlight": SubResource("Animation_jyfyd")
}

[node name="BaseGrid" type="Node2D"]
script = ExtResource("1_tsmn6")

[node name="UpLeftFrame" type="Sprite2D" parent="."]
position = Vector2(-5, -5)
texture = ExtResource("1_iw012")

[node name="UpRightFrame" type="Sprite2D" parent="."]
position = Vector2(5, -5)
rotation = 3.14159
scale = Vector2(1, -1)
texture = ExtResource("1_iw012")

[node name="DownRightFrame" type="Sprite2D" parent="."]
position = Vector2(5, 5)
scale = Vector2(-1, -1)
texture = ExtResource("1_iw012")

[node name="DownLeftFrame" type="Sprite2D" parent="."]
position = Vector2(-5, 5)
scale = Vector2(1, -1)
texture = ExtResource("1_iw012")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
zoom = Vector2(9, 9)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yajyr")
}
autoplay = "highlight"
